[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/mobs/Goblin.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/goblin-1.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/mob_mele_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/mob_death.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/enemies/death/0.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/death/1.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/death/2.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/death/3.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/death/4.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/death/5.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/death/6.png" type="Texture" id=11]
[ext_resource path="res://assets/sounds/mob_ranged_hit.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[node name="Goblin" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -21.2491, -27.1302, -2.80763, -26.2081, 11.9455, -30.8185, 35.612, -20.6757, 25.1619, -0.697449, 33.4605, 22.6617, 10.7161, 38.3369, -1.5782, 31.2677, -23.4006, 32.8045 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AudioMele" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DeathAnmiation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AudioRanged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[connection signal="animation_finished" from="DeathAnmiation" to="." method="_on_DeathAnmiation_animation_finished"]
